# libbipedal

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  FootstepPlaner.cpp  FootstepPlaner.h  LICENSE  PatternGeneratorDemo.cpp  PatternGeneratorWindow.cpp  PatternGeneratorWindow.h  PatternGeneratorWindow.ui  PolynomialFootstepPlaner.cpp  PolynomialFootstepPlaner.h  README.md  TrajectoryExporter.cpp  TrajectoryExporter.h  ZMPPlaner.cpp  ZMPPlaner.h  ZMPPreviewControl.cpp  ZMPPreviewControl.h  armarx.astylerc
cmake/: BipedalConfig.cmake.in
data/armar4/: ArmarIV-Head.xml  ArmarIV-HeadColModel.xml  ArmarIV-LeftArm.xml  ArmarIV-LeftArmColModel.xml  ArmarIV-LeftHand_dummy.xml  ArmarIV-LeftHand_dummyColModel.xml  ArmarIV-RightArm.xml  ArmarIV-RightArmColModel.xml  ArmarIV-RightHand_dummy.xml  ArmarIV-RightHand_dummyColModel.xml  ArmarIV-RightLeg.xml  ArmarIV-RightLegColModel.xml  ArmarIV-StartLeftLeg.xml  ArmarIV-StartLeftLegColModel.xml  ArmarIV-Torso.xml  ArmarIV-TorsoColModel.xml  README.md
data/armar4/iv/: eye.iv  head.iv  larm1.iv  larm2.iv  larm3.iv  larm4.iv  larm5.iv  larm6.iv  larm7.iv  lbig_toe.iv  lfoot.iv  lhand.iv  lleg1.iv  lleg1_inv.iv  lsmall_toe.iv  neck1.iv  neck2.iv  neck3.iv  neck4.iv  rarm1.iv  rarm2.iv  rarm3.iv  rarm4.iv  rarm5.iv  rarm6.iv  rbig_toe.iv  rfoot.iv  rhand.iv  rleg1.iv  rsmall_toe.iv  torso1.iv  torso2_part1.iv  torso2_part2.iv  waist.iv
data/armar4/iv_primitives/: cyl1.wrl  cyl2.wrl
data/armar4/iv_reduced/: colmodel_head.wrl  colmodel_larm1.wrl  colmodel_larm2.wrl  colmodel_larm3.wrl  colmodel_larm4.wrl  colmodel_larm5.wrl  colmodel_larm6.wrl  colmodel_larm7.wrl  colmodel_lfoot.wrl  colmodel_lhand.wrl  colmodel_lleg1.wrl  colmodel_lleg1_inv.wrl  colmodel_lleg3.wrl  colmodel_lleg3_inv.wrl  colmodel_lleg4.wrl  colmodel_lleg4_inv.wrl  colmodel_neck1.wrl  colmodel_neck2.wrl  colmodel_neck3.wrl  colmodel_neck4.wrl  colmodel_rarm1.wrl  colmodel_rarm2.wrl  colmodel_rarm3.wrl  colmodel_rarm4.wrl  colmodel_rarm5.wrl  colmodel_rarm6.wrl  colmodel_rfoot.wrl  colmodel_rhand.wrl  colmodel_rleg1.wrl  colmodel_rleg3.wrl  colmodel_rleg4.wrl  colmodel_torso1.wrl  colmodel_torso2_part1.wrl  colmodel_torso2_part2.wrl  colmodel_waist.wrl
demos/GUI/: PatternGeneratorDemo.cpp  PatternGeneratorWindow.cpp  PatternGeneratorWindow.h
demos/MMMExporter/: MMMExporterDemo.cpp
include/: bipedal.h
include/controller/: DampeningController.h  PostureController.h  TwoDOFPostureController.h
include/ik/: DifferentialReferenceIK.h  HierarchicalReferenceIK.h  HierarchicalWalkingIK.h  ReferenceIK.h  WalkingIK.h
include/pattern/: BalancingPlaner.h  FootstepPlaner.h  PolynomialFootstepPlaner.h
include/pattern/zmp/: ZMPPlaner.h  ZMPPreviewControl.h  ZMPReferencePlaner.h
include/recovery/: CapturePointRecovery.h  FallDetector.h  PushRecovery.h  ZMPFallDetector.h
include/robots/: Armar4.h  RobotConfig.h
include/stabilizer/: CartesianStabilizer.h  FrameAdaptingStabilizer.h  KajitaStabilizer.h  StabilizerFactory.h  TorqueControllingStabilizer.h
include/stabilizer/kajita/: ForceDistributor.h  ZMPDistributor.h
include/utils/: CapturePoint.h  Estimation.h  Interpolation.h  Kinematics.h  Timer.h  VelocityEstimation.h  Walking.h  ZMP.h
include/utils/mmm/: ControlMatrix.h  ControlPoint.h  ControlValue.h  GroundFrame.h  TrajectoryExporter.h  TrajectoryLogger.h  TrajectoryPlayer.h
src/: FootstepPlaner.cpp  FootstepPlaner.h  PolynomialFootstepPlaner.cpp  PolynomialFootstepPlaner.h
src/Utils/: .TrajectoryExporter.cpp.swp  ControlPoint.h  Kinematics.h  TrajectoryExporter.cpp  TrajectoryExporter.h  VelocityEstimation.h  Walking.h
src/Visualization/: FootVisualization.cpp  FootVisualization.h  VisualizationUtils.cpp  VisualizationUtils.h  ZMPVisualization.cpp  ZMPVisualization.h
src/ZMP/: ZMPPlaner.h  ZMPPreviewControl.cpp  ZMPPreviewControl.h
src/ik/: HierarchicalWalkingIK.cpp
src/pattern/: BalancingPlaner.cpp  FootstepPlaner.cpp  PolynomialFootstepPlaner.cpp  PolynomialFootstepPlaner.h
src/pattern/zmp/: ZMPPreviewControl.cpp  ZMPPreviewControl.h  ZMPReferencePlaner.cpp
src/recovery/: CapturePointRecovery.cpp  ZMPFallDetector.cpp
src/stabilizer/: CartesianStabilizer.cpp  KajitaStabilizer.cpp  StabilizerFactory.cpp
src/stabilizer/kajita/: ChestPostureController.h  DampeningController.h  FootForceController.cpp  FootForceController.h  FootTorqueController.h  ForceDistributer.cpp  ForceDistributor.h  Stabilizer.cpp  Stabilizer.h  ZMPDistributor.cpp  ZMPTrackingController.h
src/utils/: ControlPoint.h  Kinematics.cpp  Kinematics.h  TrajectoryExporter.cpp  TrajectoryExporter.h  Walking.cpp  Walking.h  ZMP.cpp
src/utils/mmm/: TrajectoryExporter.cpp  TrajectoryLogger.cpp  TrajectoryPlayer.cpp
tests/ReferenceIKTest/: CMakeLists.txt  ReferenceIKTest.cpp  Window.cpp  Window.h  Window.ui
utils/: gains_zmp.ipynb
