PROJECT ( PatternGenerator )

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

CMAKE_POLICY(VERSION 2.6)

FIND_PACKAGE(Simox REQUIRED)
FIND_PACKAGE(Coin3D REQUIRED)
FIND_PACKAGE(MMMCore REQUIRED)

set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

FILE(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*.cpp ${PROJECT_SOURCE_DIR}/src/**/.cpp)
FILE(GLOB_RECURSE INCS ${PROJECT_SOURCE_DIR}/src/*.h ${PROJECT_SOURCE_DIR}/src/**/*.h)

message (STATUS "Source: ${SRCS}")
message (STATUS "Includes: ${INCS}")

IF(Simox_USE_COIN_VISUALIZATION)

  INCLUDE_DIRECTORIES(${MMMCORE_INCLUDE_DIRS})
  INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/)

  # Demo GUI
  FILE(GLOB_RECURSE DEMO_GUI_SRCS ${PROJECT_SOURCE_DIR}/demos/GUI/*.cpp)
  FILE(GLOB_RECURSE DEMO_GUI_INCS ${PROJECT_SOURCE_DIR}/demos/GUI/*.h)
  set(DEMO_GUI_MOC_HDRS ${PROJECT_SOURCE_DIR}/demos/GUI/PatternGeneratorWindow.h)
  set(DEMO_GUI_UIS ${PROJECT_SOURCE_DIR}/demos/GUI/PatternGeneratorWindow.ui)
  set(GUI_SRCS ${SRCS} ${DEMO_GUI_SRCS})
  set(GUI_INCS ${INCS} ${DEMO_GUI_INCS})
  SimoxQtApplication("PatternGeneratorDemoGUI" "${GUI_SRCS}" "${GUI_INCS}" "${DEMO_GUI_MOC_HDRS}" "${DEMO_GUI_UIS}")
  TARGET_LINK_LIBRARIES("PatternGeneratorDemoGUI" ${MMMCORE_LIBRARIES})

  # MMM Exporter
  FILE(GLOB_RECURSE DEMO_MMM_EXPORTER_SRCS ${PROJECT_SOURCE_DIR}/demos/MMMExporter/*.cpp)
  FILE(GLOB_RECURSE DEMO_MMM_EXPORTER_INCS ${PROJECT_SOURCE_DIR}/demos/MMMExporter/*.h)
  set(MMM_EXPORTER_SRCS ${SRCS} ${DEMO_MMM_EXPORTER_SRCS})
  set(MMM_EXPORTER_INCS ${INCS} ${DEMO_MMM_EXPORTER_INCS})
  SimoxQtApplication("MMMExporter" "${MMM_EXPORTER_SRCS}" "${MMM_EXPORTER_INCS}" "" "")
  TARGET_LINK_LIBRARIES("MMMExporter" ${MMMCORE_LIBRARIES})

ENDIF()
