PROJECT ( PatternGenerator )

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

CMAKE_POLICY(VERSION 2.6)

FIND_PACKAGE(Simox REQUIRED)
FIND_PACKAGE(MMMCore REQUIRED)

set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

FILE(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*.cpp ${PROJECT_SOURCE_DIR}/src/**/.cpp)
FILE(GLOB_RECURSE INCS ${PROJECT_SOURCE_DIR}/src/*.h ${PROJECT_SOURCE_DIR}/src/**/*.h)

message (STATUS "Source: ${SRCS}")
message (STATUS "Includes: ${INCS}")

INCLUDE_DIRECTORIES(${MMMCORE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Simox_EXTERNAL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${Simox_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${EIGEN_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/)

ADD_LIBRARY(bipedal SHARED ${SRCS})

