PROJECT ( PatternGenerator )

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

export(PACKAGE Bipedal)

set(BIPEDAL_CMAKE_DIR "lib/cmake/Bipedal")
set(BIPEDAL_HEADER_DIR "include/bipedal")

configure_file(${PROJECT_SOURCE_DIR}/cmake/BipedalConfig.cmake.in BipedalConfig.cmake @ONLY)
include(${PROJECT_BINARY_DIR}/BipedalConfig.cmake)

set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")

FILE(GLOB_RECURSE SRCS ${PROJECT_SOURCE_DIR}/src/*.cpp ${PROJECT_SOURCE_DIR}/src/**/.cpp)
FILE(GLOB_RECURSE INCS ${PROJECT_SOURCE_DIR}/src/*.h ${PROJECT_SOURCE_DIR}/src/**/*.h)
FILE(GLOB_RECURSE HEADERS ${PROJECT_SOURCE_DIR}/include/*.h ${PROJECT_SOURCE_DIR}/include/**/*.h)

message(STATUS "${SRCS}")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/)
INCLUDE_DIRECTORIES(${BIPEDAL_INCLUDE_DIRS})

ADD_LIBRARY(bipedal SHARED ${SRCS})
TARGET_LINK_LIBRARIES(bipedal ${BIPEDAL_EXTERNAL_LIBRARIES})

install(FILES BipedalConfig.cmake DESTINATION "${BIPEDAL_CMAKE_DIR}" COMPONENT dev)
install(TARGETS bipedal DESTINATION lib)
install(DIRECTORY "${PROJECT_SOURCE_DIR}/include" DESTINATION include/bipedal COMPONENT dev)

